# plugind

./: .gitbump  Cargo.toml  LICENSE  README.md  plugind.service
src/ctl/: main.rs
src/daemon/: main.rs
tests/: integration_test.rs
