[package]
name = "plugind"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uds = "0.4.2"
serde_json = "1.0.142"
cli-table = "0.5.0"
users = "0.11"
nix = { version = "0.29", features = ["user", "fs", "process"] }
tracing-appender = "0.2.2"
notify = "8.2.0"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.20.0"

[[bin]]
name = "plugind"
path = "src/daemon/main.rs"

[[bin]]
name = "pluginctl"
path = "src/ctl/main.rs"